# BankingAnalysis

./: Banking_Analytics_Dataset.xlsx  README.md
AI/ChatBot/: .gitignore  app.py  deploy_chatbot.bat  pyproject.toml  requirements.txt
AI/ChatBot/assets/: style.css
AI/ChatBot/querymancer/: agent.py  config.py  logging.py  models.py  tools.py
AI/ChatBot/querymancer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AI/NoteBook (model - time series)/: banking_analytics_notebook (3).ipynb  cleaned_data_summary.csv  fraud_detection_results.csv  inactive_high_value_accounts.csv  loan_default_predictions.csv  rfm_segmentation.csv  time_series_forecasts.csv
Sql/: Final _SQL.sql
power bi/: BankProject(V3).pbix
